# purposeforge

./: GUIDE.md  Modelfile.glm-4.7-flash  Modelfile.mistral-7b  Modelfile.mistral-small-24b  Modelfile.nemotron-30b  Modelfile.nomic-embed  Modelfile.qwen2.5-coder-32b  Modelfile.qwen2.5-coder-7b  Modelfile.qwen3-coder-30b  Modelfile.qwen3-coder-30b-instruct-q8  Modelfile.qwen3-coder-30b-q4  Modelfile.qwen3.5-27b  Modelfile.qwen3.5-35b  Modelfile.qwen3.5-35b-a3b  Modelfile.qwen3.5-9b  OLLAMA_SETUP.md  PHASED_GENERATION.md  README.md  check-gguf.ps1  install-ollama.ps1  setup-ollama-complete.ps1  setup-ollama-models.bat  test_ollama.ps1
.ai/: INDEX.md  README.md
.purposeforge/: projects_db.json  skillset.md
.qwen/: RESTORE_POINT.md
agents/: README.md  SAFETY_PROTOCOL.md  STATUS_REPORT.md  agent_01_token_counter.md  agent_02_code_validator.md  agent_03_git_branches.md  agent_04_cloud_sync.md  agent_05_dynamic_templates.md  agent_06_ast_modifier.md  agent_07_error_handling.md  agent_08_integration.md  agent_orchestrator.py  agent_orchestrator_v2.py  demo_safety.py  run_agent1.ps1  run_agent1.py
purposeforge/: qwen.rs
src/: App.css  App.tsx
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
src-tauri/src/commands/: builder.rs  github.rs  model.rs  qwen.rs  token_counter.rs  validator.rs
src/components/ai/: AIPanel.tsx
src/components/builder/: BuilderPanel.tsx  BuilderPanelPhased.tsx
src/hooks/: useModelPhased.ts  useQwen.ts
src/lib/: api.ts  phased-prompts.ts
src/types/: index.ts  phased-generation.ts
