[package]
name = "purposeforge"
version = "0.1.0"
description = "Modular software builder with Qwen AI and GitHub CLI"
authors = ["CASE"]
edition = "2021"

[lib]
name = "purposeforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
uuid = { version = "1.21.0", features = ["v4"] }
tiktoken-rs = "0.5"
